# diskbench-rs

./: .gitignore  Cargo.toml  README.md
src/: bench.rs  diskbench.rs  main.rs
