[package]
name = "diskbench"
description = "Simple Disk Benchmark"
version = "0.1.1"
edition = "2021"
authors = ["deeean <margintop3498@icloud.com>"]
license = "MIT"
include = ["src/**/*", "*.md"]
keywords = ["io", "commandline"]
categories = ["command-line-utilities"]
repository = "https://github.com/deeean/diskbench"

[dependencies]
fastrand = "1.7.0"

[[bin]]
name = "diskbench"